# SSS

./: Anchor.toml  Cargo.toml  DEPLOY-GUIDE.md  README.md  SECURITY_AUDIT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
audit/artifacts/: anchor-build.txt  backend-shared-test.txt  docker-compose-build.txt  final-backend-shared-lint.txt  final-integration-tests.txt  final-pnpm-lint.txt  final-pnpm-test.txt  gitleaks.txt  manifests.txt  pnpm-audit-root.txt  pnpm-audit.txt  pnpm-lint.txt  pnpm-test.txt  tree.txt  trivy-config.txt
backend/compliance/src/: index.ts
backend/indexer/src/: index.ts
backend/mint-burn/src/: idempotency.test.ts  idempotency.ts  index.ts
backend/shared/src/: auth.test.ts  auth.ts  db.ts  env.ts  index.ts  webhook.test.ts  webhook.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md
frontend/src/: bootstrap.tsx  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  constants.ts  types.ts
frontend/src/lib/: format.ts  sssAdapter.ts
frontend/src/state/: AppContext.tsx
programs/sss-stablecoin/: Cargo.toml
programs/sss-stablecoin/src/: compliance.rs  events.rs  lib.rs  math.rs  state.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
scripts/: check-tooling.sh  deploy-devnet.ts  deploy-to-devnet.js
sdk/cli/: package.json
sdk/cli/src/: index.ts
sdk/core/: package.json  tsconfig.json
sdk/core/src/: index.ts  types.ts
tests/: package.json  run-anchor-tests.ts
tests/integration/: edge-cases.test.ts  multi-user.test.ts  pause-control.test.ts  role-permissions.test.ts  sss1-flow.test.ts  sss2-flow.test.ts
trident-tests/: Cargo.toml
trident-tests/src/: lib.rs
(+22 files in other folders)
