[workspace]
members = [
  "programs/sss-stablecoin",
  "programs/sss-transfer-hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["token", "associated_token"] }
borsh = "0.10.3"
solana-program = "~1.16"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
