[workspace]
members = [
  "programs/sss-stablecoin",
  "programs/sss-transfer-hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
borsh = "=0.10.4"
solana-program = "=1.17.34"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
