[workspace]
members = [
  "programs/sss-stablecoin",
  "programs/sss-transfer-hook",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", default-features = false, features = ["token_2022"] }
borsh = "=0.10.4"
solana-program = "=1.17.14"
spl-memo = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.9.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "=0.4.0"
spl-transfer-hook-interface = "=0.3.0"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
